Página de práctica. Salió lo que salió

--- a/principal.html
+++ b/principal.html
@@ -1,22 +1,59 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML5>
 <html lang="es">
 	<head>
 		<meta charset = "UTF-8">
 		<title>Página de práctica</title>
-		<style>
+		<!--<style>
 			p{
-    			color: green;
+    			color: red;
    				 } 
 		</style>
+		<style>
+  .mi-div {
+    		background-color: lightblue;
+   			padding: 10px;
+   			color: black;
+  }
+</style>-->
 		<link rel="STYLESHEET" href="miestilo.css">
 	</head>
 		
 <body>
+<header>
+<h1>Practicando en Talentos Digitales </h1>
+<h3>Bienvenido a esta modesta página</h3>
+</header>
+<nav>
+<nav class="menu">
+  <ul>
+    <li><a href="https://talentosdigitales.ar/">Inicio</a></li>
+    <li><a href="#">Sobre nosotros</a></li>
+    <li><a href="#">Formulario de registro</a></li>
+  </ul>
+</nav>
 
+</nav>
+<div class="mi-div">
 <p class="mi-clase">
+
 Somos una empresa que se dedica a la venta de relojes de mesa y pared con diseños únicos e innovadores. Utilizamos materia prima
 de calidad. Elaboramos productos a la medida del cliente. 
 </p>
+
+ <p>Aquí solucionamos tooodo, salvo mostrar una imagen en la página</p> 
+</div>
+
+
+<div>
+<img src="imagenes/arithmetic.jpg" width=20% alt="Arithmetic">
+</div>
+
+<footer class="footer-content">
+Todos los derechos reservados para mí
+        <div><a href="https://www.facebook.com/profile.php?id=100092136783185&mibextid=ZbWKwL"><img src="imagenes/facebook.png" width=5% alt="Facebook"></a>
+        </div>
+       
+</footer>
 </body>
 </html>
 	
